#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([Slice Hack], [0.1], [])
AC_PREREQ([2.65])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([1.10 no-define foreign])
# PKG_CHECK_MODULES([DEPS])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT
